fix(modal): use the same max-height everywhere without a difference to legacy, because scrollbar was also appearing on mobile. Also fixed base to 100vh

--- a/src/definitions/modules/modal.less
+++ b/src/definitions/modules/modal.less
@@ -237,14 +237,8 @@
   .ui.entire.fullscreen.modal .content.content.content {
     min-height: @entireFullscreenScrollingContentMaxHeightMobile;
   }
-  .ui.legacy.entire.fullscreen.modal .content.content.content {
-    min-height: @legacyEntireFullscreenScrollingContentMaxHeightMobile;
-  }
   .ui.entire.fullscreen.modal .scrolling.content.content.content {
     max-height: @entireFullscreenScrollingContentMaxHeightMobile;
-  }
-  .ui.legacy.entire.fullscreen.modal .scrolling.content.content.content {
-    max-height: @legacyEntireFullscreenScrollingContentMaxHeightMobile;
   }
   .ui.modal > .content {
     display: block;
@@ -346,12 +340,6 @@
 
 .ui.legacy.entire.fullscreen.modal {
   margin-top: -@scrollingMargin !important;
-}
-.ui.legacy.entire.fullscreen.modal .content {
-  min-height: @legacyEntireFullscreenScrollingContentMaxHeight;
-}
-.ui.legacy.entire.fullscreen.modal .scrolling.content {
-  max-height: @legacyEntireFullscreenScrollingContentMaxHeight;
 }
 
 /*******************************
